Fix dark mode for Spots & Twilight Imperium

--- a/src/css/games/spots.less
+++ b/src/css/games/spots.less
@@ -1,12 +1,5 @@
-@import "./common";
-
 #D {
 	.dijitTooltipContainer .spt-then {
 		filter: invert(1);
-	}
-
-	.spt-card,
-	.spt-trick {
-		filter: brightness(0.9);
 	}
 }
